@@ -1,5 +1,6 @@
 Changes for 1.1beta2:
 
+ - added mass-delete function for IT Services (Alexei)
  - fixed compilation of LDAP functionality (Alexei)
  - new parameter for zabbix_agentd, show list of supported parameters (Alexei)
  - added path to SNMP headers in Makefiles (Alexei)
